--- a/index.html
+++ b/index.html
@@ -380,7 +380,7 @@
 
                         <h2 class="card-title mb-3">12.90$ - 18.85$</h2>
 
-                        <p class="font-medium text-sm mb-1">Apples</p>
+                        <p class="font-medium text-sm mb-1">Red Dragon</p>
                         <div class="rating">
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
