magnifing glass fixed

--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
 
                     <input class="  p-3 rounded-3xl w-80  " type="text" name="" id=""
                         placeholder=" search here">
-                    <div class="  relative -left-9">
-                        <i class=" fa-solid fa-magnifying-glass"></i>
+                    <div class="relative -left-9 text-black">
+                        <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
 
 
